--- a/Leos.tex
+++ b/Leos.tex
@@ -47,7 +47,7 @@
 	
 	
 	% add bibliography database
-	\addbibresource{JoSM.bib}
+	\addbibresource{JoSM Kopie.bib}
 	
 	% space between biblio items
 	\setlength\bibitemsep{1.7\itemsep} 
@@ -112,3 +112,4 @@
 
 \section{Introduction}
 
+\end{document}
