--- a/Leos.tex
+++ b/Leos.tex
@@ -22,7 +22,7 @@
 	\usepackage{hyperref}
 
 	% biblatex
-	\usepackage[backend=biber,hyperref=true]{biblatex} \usepackage{csquotes}
+	\usepackage[style=authoryear-icomp,natbib=true,maxcitenames=2, maxbibnames=11,backend=biber,pagetracker=page,hyperref=true]{biblatex} \usepackage{csquotes}
 	\renewcommand*{\bibsetup}{%
 		\interlinepenalty=10000\relax % default is 5000
 		\widowpenalty=10000\relax
@@ -112,4 +112,6 @@
 
 \section{Introduction}
 
+asdkjaslkdjasd \citet{Hofmann2017}
+\printbibliography[title=Literatur]
 \end{document}
